# flashcards

./: .gitignore  LICENSE  README.md  flashcards.py  pyproject.toml
